--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "homebridge-solis5g-alarm",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Homebridge plugin for a Solis5G Alarm state",
   "main": "index.js",
   "dependencies": {
-    "request": ">=2.88.0",
-    "moment": "^2.29.1"
+    "child_process": "^1.0.2",
+    "moment": "^2.29.1",
+    "request": ">=2.88.0"
   },
   "engines": {
     "homebridge": ">=0.4.50",
